Added image for Polish language

--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -1916,5 +1916,23 @@
 		French:"langage"
 		Portuguese:"Língua"
 	}
+	
+	"AI":{
+	}
+	
+	"Human":{
+	}
+	
+	"Hotseat":{
+	}
+	
+	"User Id":{
+	}
+	
+	"Click to copy":{
+	}
+	
+	"Username":{
+	}
 
 }
