Update Diplomacy,Trade,Nations.json (#981)
* Update Diplomacy,Trade,Nations.json

* Update Diplomacy,Trade,Nations.json

* Update Diplomacy,Trade,Nations.json

Remotion of unecessary (at least for now) translation lines

--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -472,6 +472,10 @@
 		German:"Handel anbieten"
 	}
 
+	"Retract offer":{	
+		Italian:"Ritira offerta"
+	}
+
 	"What do you have in mind?":{	
 		Italian:"Cos'hai in mente?"
 		Russian:"Что вы об этом думаете?"
@@ -650,6 +654,10 @@
 		French:"Déclarations de guerre"
 		Simplified_Chinese:"宣战"
 		Portuguese:"Declarações de guerra"
+	}
+
+	"Introduction to [nation]":{
+		Italian:"Introduci a [nation]"
 	}
 
 	"Luxury resources":{
