--- a/android/assets/jsons/Translations/Notifications.json
+++ b/android/assets/jsons/Translations/Notifications.json
@@ -403,7 +403,7 @@
 		Portuguese:"Encontramos sobreviventes nas ruínas - população adicionada a [cityName]"
 	}
 	"We have discovered the lost technology of [techName] in the ruins!":{
-		Italian:"Abbiamo scoperto i segreti della tecnologia perduta [techName]]!"
+		Italian:"Abbiamo scoperto i segreti della tecnologia perduta [techName]!"
 		Romanian:"Am descoperit tehnologia pierdută [techName] printre ruine!"
 		German:"Wir haben die vergessene Technologie [techName] in den Ruinen wiederentdeckt!"
 		French:"Nous avons découvert la technologie perdu [techName] dans les ruines!"
