--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -293,6 +293,30 @@
 	}
 	
 	
+	"AI":{
+		Italian:"IA"
+	}
+	
+	"Human":{
+		Italian:"Umano"
+	}
+	
+	"Hotseat":{
+		Italian:"Hotseat"
+	}
+	
+	"User Id":{
+		Italian:"ID Utente"
+	}
+	
+	"Click to copy":{
+		Italian:"Clicca per copiare"
+	}
+	
+	"Username":{
+		Italian:"Nome utente"
+	}
+	
 	// Game speeds
 	
 	"Game Speed":{
